Styling photo info for correct spacing

--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -3,6 +3,7 @@
     height: 3rem;
     width: 100%;
     background-color: #212124;
+    z-index: 10;
 
     .header-content {
         display: flex;
