--- a/app/assets/stylesheets/components/_photo_index.scss
+++ b/app/assets/stylesheets/components/_photo_index.scss
@@ -21,12 +21,8 @@
     }
 
     .photo-details {
-        a {
-            color: #fff;
-            text-decoration: none;
-        }
-
-
+        height: 100%;
+        color: #fff;
         z-index: 2;
         position: absolute;
         display: none;
@@ -36,7 +32,8 @@
 
 .photo-item-container:hover .photo-details {
     display: flex;
-    align-content: space-between;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 .photo-item-container:hover img {
